# tree-sitter-wesl

./: .gitattributes  Cargo.toml  LICENSE.md  Makefile  NOTICE.md  Package.swift  README.md  binding.gyp  build.rs  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tmp.json  tree-sitter.json
bindings/c/: tree-sitter-mew.h  tree-sitter-mew.pc.in  tree-sitter-wesl.h  tree-sitter-wesl.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_wesl/: __init__.py  binding.c
bindings/python/tree_sitter_wgsl/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWeslTests/: TreeSitterWeslTests.swift
bindings/swift/TreeSitterWgslTests/: TreeSitterWgslTests.swift
queries/: highlights.scm  locals.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test-cases/: case-1.mew
wesl-spec/: Makefile  index.bs.pre  wgsl.lalr.txt
wesl-spec/grammar/: package.json
wesl-spec/tools/: dependency-versions.py  extract-grammar.py
wesl-spec/tools/analyze/: lalr.py
